--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>sumanth</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+</head>
+<body>
+<h1>Hey brillio, I'm Sumanth and im from Benagluru</h1>
+</body>
+</html>
